# postmock

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SEQUENCE_USAGE.md  USER_GUIDE.md  VERSION_UPDATE_0.1.1.md  cn.probiecoder.postmock.yml  extract-pubkey.sh  flathub.json  index.html  package-lock.json  package.json  postmock-new.key  postmock-new.key.pub  test-sequence.js  test_decode.sh  vite.config.js
.github/: CHANGELOG_AUTOMATION.md  CHANGELOG_SUMMARY.md  CHANGELOG_WORKFLOW.md  COMMIT_CONVENTION.md  DISTRIBUTION.md  DISTRIBUTION_FORMATS.md  FLATHUB.md  GITHUB_SECRETS_SETUP.md  IMPLEMENTATION_SUMMARY.md  KEY_CONFIGURATION_REFERENCE.md  KEY_QUICK_REFERENCE.md  METADATA_STATUS.md  PACKAGE_METADATA.md  PORTABLE_GUIDE.md  QUICK_FIX_SIGNING_ERROR.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  RELEASE_TEMPLATE.md  SIGNING_KEYS_GUIDE.md  SIGNING_KEY_WITH_PASSWORD.md  TROUBLESHOOTING.md  UPDATER_QUICKSTART.md  UPDATER_SETUP.md  copilot-instructions.md  release.yml
.kiro/: tech-stack-docs.md
flatpak/: README.md  cn.probiecoder.postmock.desktop  cn.probiecoder.postmock.metainfo.xml
screenshots/: README.md
scripts/: auto-generate-key.sh  clean-data.bat  clean-data.sh  generate-changelog.sh  generate-signing-key.sh  release.sh  setup-github-secrets.sh  show-private-key.sh  smart-changelog.sh  update-metainfo.sh  validate-metadata.sh  validate-yaml.bat  validate-yaml.sh  (+1 more)
src-tauri/: Cargo.toml  postmock.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+49 files in other folders)
